.vscode-remote/data/logs/20250809T141057/exthost9/output_logging_20250809T155237/4-Prettier.log
["INFO" - 3:52:52 PM] Extension Name: esbenp.prettier-vscode.
["INFO" - 3:52:52 PM] Extension Version: 11.0.0.
["INFO" - 3:53:29 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 3:53:54 PM] Formatting file:///workspace/Website-starter/src/assets/styles/atyp/stylesheet.css
["INFO" - 3:53:54 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 3:53:54 PM] PrettierInstance:
{
  "modulePath": "/workspace/Website-starter/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 3:53:54 PM] Using ignore file (if present) at /workspace/Website-starter/.prettierignore
["INFO" - 3:53:54 PM] File Info:
{
  "ignored": false,
  "inferredParser": "css"
}
["INFO" - 3:53:54 PM] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 3:53:54 PM] Prettier Options:
{
  "filepath": "/workspace/Website-starter/src/assets/styles/atyp/stylesheet.css",
  "parser": "css",
  "plugins": [
    "/workspace/Website-starter/node_modules/prettier-plugin-astro/dist/index.js",
    "/workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs"
  ],
  "semi": false,
  "trailingComma": "es5",
  "singleQuote": false,
  "printWidth": 80,
  "tabWidth": 2,
  "useTabs": false,
  "bracketSpacing": true,
  "arrowParens": "avoid",
  "htmlWhitespaceSensitivity": "ignore",
  "endOfLine": "lf",
  "embeddedLanguageFormatting": "auto"
}
["ERROR" - 3:53:54 PM] Error formatting document.
["ERROR" - 3:53:54 PM] CssSyntaxError: Unexpected } (42:1)
  40 |                                                                                                     font-style: normal;
  41 |                                                                                                     }
> 42 | }
     | ^
SyntaxError: CssSyntaxError: Unexpected } (42:1)
  40 |                                                                                                     font-style: normal;
  41 |                                                                                                     }
> 42 | }
     | ^
    at cp (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:11409)
    at Xs (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:18680)
    at Object.gl [as parse] (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:18887)
    at Object.parse (file:///workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs:1329:27573)
    at async parse5 (file:///workspace/Website-starter/node_modules/prettier/index.mjs:16731:11)
    at async coreFormat (file:///workspace/Website-starter/node_modules/prettier/index.mjs:17287:25)
    at async formatWithCursor (file:///workspace/Website-starter/node_modules/prettier/index.mjs:17504:14)
    at async Module.format2 (file:///workspace/Website-starter/node_modules/prettier/index.mjs:19051:25)
["INFO" - 3:53:54 PM] Formatting completed in 73ms.
["INFO" - 3:54:01 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 3:54:04 PM] Formatting file:///workspace/Website-starter/src/assets/styles/atyp/stylesheet.css
["INFO" - 3:54:04 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 3:54:04 PM] PrettierInstance:
{
  "modulePath": "/workspace/Website-starter/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 3:54:04 PM] Using ignore file (if present) at /workspace/Website-starter/.prettierignore
["INFO" - 3:54:04 PM] File Info:
{
  "ignored": false,
  "inferredParser": "css"
}
["INFO" - 3:54:04 PM] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 3:54:04 PM] Prettier Options:
{
  "filepath": "/workspace/Website-starter/src/assets/styles/atyp/stylesheet.css",
  "parser": "css",
  "plugins": [
    "/workspace/Website-starter/node_modules/prettier-plugin-astro/dist/index.js",
    "/workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs"
  ],
  "semi": false,
  "trailingComma": "es5",
  "singleQuote": false,
  "printWidth": 80,
  "tabWidth": 2,
  "useTabs": false,
  "bracketSpacing": true,
  "arrowParens": "avoid",
  "htmlWhitespaceSensitivity": "ignore",
  "endOfLine": "lf",
  "embeddedLanguageFormatting": "auto"
}
["ERROR" - 3:54:04 PM] Error formatting document.
["ERROR" - 3:54:04 PM] CssSyntaxError: Unexpected } (42:1)
  40 |                                                                                                     font-style: normal;
  41 |                                                                                                     }
> 42 | }
     | ^
SyntaxError: CssSyntaxError: Unexpected } (42:1)
  40 |                                                                                                     font-style: normal;
  41 |                                                                                                     }
> 42 | }
     | ^
    at cp (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:11409)
    at Xs (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:18680)
    at Object.gl [as parse] (file:///workspace/Website-starter/node_modules/prettier/plugins/postcss.mjs:54:18887)
    at Object.parse (file:///workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs:1329:27573)
    at async parse5 (file:///workspace/Website-starter/node_modules/prettier/index.mjs:16731:11)
    at async coreFormat (file:///workspace/Website-starter/node_modules/prettier/index.mjs:17287:25)
    at async formatWithCursor (file:///workspace/Website-starter/node_modules/prettier/index.mjs:17504:14)
    at async Module.format2 (file:///workspace/Website-starter/node_modules/prettier/index.mjs:19051:25)
["INFO" - 3:54:04 PM] Formatting completed in 25ms.
["INFO" - 3:54:13 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 3:54:14 PM] Formatting file:///workspace/Website-starter/src/assets/styles/atyp/stylesheet.css
["INFO" - 3:54:14 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 3:54:14 PM] PrettierInstance:
{
  "modulePath": "/workspace/Website-starter/node_modules/prettier/index.cjs",
  "messageResolvers": {},
  "version": "3.6.2"
}
["INFO" - 3:54:14 PM] Using ignore file (if present) at /workspace/Website-starter/.prettierignore
["INFO" - 3:54:14 PM] File Info:
{
  "ignored": false,
  "inferredParser": "css"
}
["INFO" - 3:54:14 PM] Detected local configuration (i.e. .prettierrc or .editorconfig), VS Code configuration will not be used
["INFO" - 3:54:14 PM] Prettier Options:
{
  "filepath": "/workspace/Website-starter/src/assets/styles/atyp/stylesheet.css",
  "parser": "css",
  "plugins": [
    "/workspace/Website-starter/node_modules/prettier-plugin-astro/dist/index.js",
    "/workspace/Website-starter/node_modules/prettier-plugin-tailwindcss/dist/index.mjs"
  ],
  "semi": false,
  "trailingComma": "es5",
  "singleQuote": false,
  "printWidth": 80,
  "tabWidth": 2,
  "useTabs": false,
  "bracketSpacing": true,
  "arrowParens": "avoid",
  "htmlWhitespaceSensitivity": "ignore",
  "endOfLine": "lf",
  "embeddedLanguageFormatting": "auto"
}
["INFO" - 3:54:14 PM] Formatting completed in 47ms.
["INFO" - 3:56:13 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 3:56:39 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 3:59:04 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:00:26 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:00:27 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:03:14 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:04:55 PM] Using config file at /workspace/Website-starter/.prettierrc
["INFO" - 4:06:50 PM] Using config file at /workspace/Website-starter/.prettierrc
